# USDTVault_Streamlit

./: .gitignore  .replit  app.py  pyproject.toml  replit.md
.streamlit/: config.toml
USDTVaultPro/: .replit  BLOCKCHAIN_INTEGRATION_SUMMARY.md  BLOCKCHAIN_VERIFICATION_SUMMARY.md  DEMO_ACCOUNT_INFO.md  FIX_SUMMARY.md  design_guidelines.md  package-lock.json  package.json  replit.md  test-2fa-security.js  test-2fa-setup.js  test-blockchain-integration.js  test-blockchain-integration.mjs  test-blockchain-verification.js  test-blockchain-verification.mjs  test-credential-export.js  test-credential-export.mjs  test-csrf.js  test-csrf.mjs  test-login-browser.mjs  test-login.js  test-pin.js  test-transaction.js
USDTVaultPro/client/: index.html
USDTVaultPro/client/src/: App.tsx  index.css
USDTVaultPro/client/src/components/: AppSidebar.tsx  BalanceCard.tsx  BalanceChart.tsx  CredentialExport.tsx  DeletionCoolingOffModal.tsx  ImportWalletModal.tsx  InvestmentPlans.tsx  (+13 more)
USDTVaultPro/server/: authMiddleware.ts  blockchainService.ts  csrf.ts  db.ts  index.ts  rateLimiting.ts  routes-original.ts  routes.ts  securityLogger.ts  storage.ts  transactionLock.ts  validation.ts
USDTVaultPro/server/data/: withdrawalGuidance.ts
USDTVaultPro/server/models/: InvestmentPlan.ts  SavingsGoal.ts  Transaction.ts  User.ts
USDTVaultPro/server/services/: aiCounseling.ts
USDTVaultPro/shared/: schema.ts
pages/: 1_Dashboard.py  2_Savings_Goals.py  3_Transactions.py  4_Investment_Plans.py  5_Settings.py  6_Profile.py
utils/: auth.py  blockchain.py  database.py  sidebar.py  theme.py
(+18 files in other folders)
